// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/agree/demo/basic.md correctly 1`] = `
<div
  class="m-agree agree-demo m-agree-checked"
>
  <div
    class="m-agree-icon"
  >
    <i
      class="m-icon m-icon-check-circle"
    >
      <i
        class="m-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="1em"
          width="1em"
        >
          <use
            href="#icon-check-circle"
          />
        </svg>
      </i>
    </i>
  </div>
  <div
    class="m-agree-content"
  >
    本人承诺投保人已充分了解本保险产品，并保证投保信息的真实性，理解并同意
  </div>
</div>
`;

exports[`renders ./components/agree/demo/disabled.md correctly 1`] = `
<div>
  <div
    class="m-agree agree-demo m-agree-checked"
  >
    <div
      class="m-agree-icon"
    >
      <i
        class="m-icon m-icon-check-circle"
      >
        <i
          class="m-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="1em"
            width="1em"
          >
            <use
              href="#icon-check-circle"
            />
          </svg>
        </i>
      </i>
    </div>
    <div
      class="m-agree-content"
    >
      本人承诺投保人已充分了解本保险产品，并保证投保信息的真实性，理解并同意
    </div>
  </div>
  <div
    class="m-agree agree-demo m-agree-disabled"
  >
    <div
      class="m-agree-icon"
    >
      <i
        class="m-icon m-icon-check-circle"
      >
        <i
          class="m-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="1em"
            width="1em"
          >
            <use
              href="#icon-check-circle"
            />
          </svg>
        </i>
      </i>
    </div>
    <div
      class="m-agree-content"
    >
      本人承诺投保人已充分了解本保险产品，并保证投保信息的真实性，理解并同意
    </div>
  </div>
</div>
`;
